src/objects/Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjust_Receipt__c</fullName>
        <formula>HYPERLINK(&quot;/apex/S_ReceiptModule?id=&quot;+Id,&quot;Adjust Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjust Receipt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Receipts (Adjustment Customer)</relationshipLabel>
        <relationshipName>Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Rs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_in_Foreign_Currency__c</fullName>
        <label>Amount in Foreign Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Validation_Message__c</fullName>
        <defaultValue>&quot;Receipt cannot be approved untill cheque is physically received.&quot;</defaultValue>
        <inlineHelpText>Receipt cannot be approved untill cheque is physically received.</inlineHelpText>
        <label>Approval Validation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Calculate_Service_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Calculate Service Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drawee Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banking__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed - Insufficient Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed – Signature mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed – PDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed – Stop payment by client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed – Overwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Failed – Amount Mismatch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Upload_Msg__c</fullName>
        <label>Batch Upload Msg</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmednagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akbarpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alipurduar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambikapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amravati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amroha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantnag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asansol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azamgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badgam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bagaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challan_No__c</fullName>
        <label>Challan No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckReceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckReceipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_DD_Amount_Rs__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_DD_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_DD__c</fullName>
        <label>Cheque/DD No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Indian Rupee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Pound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuwaiti Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Riyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese Yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Euro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Different_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Different Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_on_Dues__c</fullName>
        <label>Discount on Dues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_to_begiven_on_Timely_payment__c</fullName>
        <label>Discount to be given on Timely payment</label>
        <picklist>
            <picklistValues>
                <fullName>As Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As percentage Installments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dishonour_Reason__c</fullName>
        <label>Dishonour Reason</label>
        <picklist>
            <picklistValues>
                <fullName>A/C Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount In Words and Figures Differ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Not Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque is Multilated/Stale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawer&apos;s Signature Differ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effects Not Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Drawn On Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Stopped By Drawer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer to Drawer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DraweeBank__c</fullName>
        <label>Drawee Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Abhyudaya Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad Mercantile Co-Op Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola Janata Commercial Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola Urban Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar State Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh Mahesh Co-Op Urban Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh State Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh State Co-operative Apex Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam Co-operative Apex Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Baroda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bassein Catholic Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharat Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharat Co-operative Bank (Mumbai)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharati Sahakari Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar State Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bombay Mercantile Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canara Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic Syrian Bank Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bank of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh State Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh Rajya Sahakari Bank Maryadit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen Credit Co-operative Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmos Co-operative Urban Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drawee_Bank_If_Others__c</fullName>
        <label>Drawee Bank(If Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_in_favour_of__c</fullName>
        <label>Drawn in favour of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Amount_Rs__c</fullName>
        <label>Due Amount (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOREX__c</fullName>
        <label>Forex Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Receipt__c</fullName>
        <label>First Receipt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Currency_Type__c</fullName>
        <label>Foreign Currency Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTDS_And_NoDemandRaised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTDS And NoDemandRaised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Receipt_Date__c</fullName>
        <label>Manual Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mode_Selection__c</fullName>
        <label>Mode Selection</label>
        <picklist>
            <picklistValues>
                <fullName>Rupees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Instrument</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD/Pay Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MyID__c</fullName>
        <label>MyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEFT__c</fullName>
        <label>NEFT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narration__c</fullName>
        <label>Narration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Receipt_No__c</fullName>
        <label>Old Receipt No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Account_Money__c</fullName>
        <label>On Account Money</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Email_Id__c</fullName>
        <label>Opportunity Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Email__c</fullName>
        <formula>Opportunity__r.Email__c</formula>
        <label>Opportunity Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Project__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAN_no_of_TDS_Deductee__c</fullName>
        <label>PAN no of TDS Deductee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_no_of_TDS_Deductor__c</fullName>
        <label>PAN no of TDS Deductor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Order__c</fullName>
        <label>Pay Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Plan</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Standard_Pay_Plan_Header__c.Project__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physically_Cheque_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Cheque Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posted_to_Fa__c</fullName>
        <label>Posted to Fa</label>
        <picklist>
            <picklistValues>
                <fullName>UnProcessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Cheque_Bounce__c</fullName>
        <formula>IF( ISPICKVAL(Receipt_Status__c, &quot;Dishonored&quot;), HYPERLINK(&quot;apex/S_ChequeBouncePrint?receiptId=&quot;+Id+&quot;&amp;letterHead=false&quot;,&quot;Click Here&quot; ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Cheque Bounce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Cheque_Bounce_on_LetterHead__c</fullName>
        <formula>IF( ISPICKVAL(Receipt_Status__c, &quot;Dishonored&quot;), HYPERLINK(&quot;apex/S_ChequeBouncePrint?receiptId=&quot;+Id+&quot;&amp;letterHead=true&quot;,&quot;Click Here&quot; ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Cheque Bounce [on LetterHead]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Receipt_On_Letterhead__c</fullName>
        <formula>HYPERLINK(&quot;/apex/S_PrintReceipt?id=&quot;+Id+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Receipt On Letterhead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Receipt__c</fullName>
        <formula>HYPERLINK(&quot;/apex/S_PrintReceipt?id=&quot;+Id+&quot;&amp;letterhead=&quot;+&apos;0&apos;,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Receipt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Block, CRM Returned To Sales, Hold, Sold, Vacant, Welcome Call Pending, BIP - Sales, BIP - RM Verification, BIP - CRM, BIP</value>
            </filterItems>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Unit__c.Project__c</valueField>
            </filterItems>
            <infoMessage>Block, CRM Returned To Sales, Vacant, Welcome Call Pending, BIP - Sales, BIP - RM Verification, Sold, Block</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTGS__c</fullName>
        <label>RTGS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason for cheque rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Reject__c</fullName>
        <label>Reason for Receipt Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_rejection_new__c</fullName>
        <label>Physical Verification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Over writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Date lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Wrong Favoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Amount mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Signature missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected-Old Cheque Format CTS2010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Against__c</fullName>
        <label>Receipt Against</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamp Duty And Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Date_For_SMS__c</fullName>
        <label>Receipt Date For SMS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_No_Manual__c</fullName>
        <label>Receipt No (Manual)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_No__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Receipt No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <formula>(Project__r.RDS_Short_Name__c) &amp; &apos;/&apos; &amp; Left( Project_Unit__r.TowerName__r.Name ,2) &amp; &apos;-&apos; &amp;  Project_Unit__r.Name &amp; &apos;/&apos; &amp;  TEXT(Receipt_Date__c)  &amp; &apos;/&apos; &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Status__c</fullName>
        <label>Receipt Status</label>
        <picklist>
            <picklistValues>
                <fullName>UnProcessed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed-Finance Submission Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed-Sent for Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Verification Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Type__c</fullName>
        <label>Receipt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Presented Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reg_No__c</fullName>
        <label>Reg.No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemarksText__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remarks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sharing_ProjectName__c</fullName>
        <label>Sharing Project Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Customer Pay Plan Detail</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Standard_Customer_Pay_Plan_Detail__c.Customer_Pay_Plan_Header__r.Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Adjustment_Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <description>used for reporting, to pull receipts whose status has change today</description>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TDS_Amount_In_Rs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TDS Amount (In Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Amount_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Amount Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token_Amount_ST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Token Amount ST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <formula>Project_Unit__r.UnitNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebLink__c</fullName>
        <label>WebLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>Opportunity__r.Project_Unit__r.Booking__r.Application_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <label>Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Booking__c</columns>
        <columns>Cheque_DD_Date__c</columns>
        <columns>Receipt_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>